--- a/SQLAutoBackup/app.config
+++ b/SQLAutoBackup/app.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="SentryDSN" value="https://[id]@sentry.io/[another-id]" />
+		<add key="SentryDSN" value="https://xxxxxx@sentry.io/xxxxxx" />
 
-		<add key="HostID" value="HasanG" />
-		<add key="BackupDir" value="C:\Backup\Databases Backup\" />
+		<add key="BackupDir" value="Q:\!DatabasesBackup\" />
 		<add key="DBs" value="*" />
-		<add key="ExcludedDBs" value="tempdb;db-name-to-exclude" />
+		<add key="ExcludedDBs" value="master;model;msdb;tempdb" />
+		<add key="SuccessMessages" value="false" />
 	</appSettings>
 	<connectionStrings>
 		<add name="default" connectionString="Data Source=.\;Initial Catalog=master;Integrated Security=SSPI" />
@@ -14,4 +14,16 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Sentry.Protocol" publicKeyToken="fba2ec45388e2af0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.6.0" newVersion="2.1.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
